refactor: JCF * Repository 싱글톤 패턴 변경, open/ close 함수 작성
- 다중 호출시에도 데이터 유지를 위한 싱글톤 패턴화
- File * Repo 와의 호환성을 위한 open() / close() 함수 작성.